--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@convex-dev/react-query": "0.0.0-alpha.8",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -27,7 +28,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-form": "^1.12.2",
-    "@tanstack/react-router": "^1.114.3",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-router": "^1.120.19",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/react-router-with-query": "^1.114.3",
     "@tanstack/react-start": "^1.114.3",
