--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@convex-dev/react-query": "0.0.0-alpha.8",
+    "@lexical/react": "^0.32.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -34,6 +35,18 @@
     "@tanstack/react-router-with-query": "^1.114.3",
     "@tanstack/react-start": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-document": "^2.14.0",
+    "@tiptap/extension-history": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
+    "@tiptap/extension-paragraph": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-strike": "^2.14.0",
+    "@tiptap/extension-text": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/pm": "3.0.0-beta.7",
+    "@tiptap/react": "3.0.0-beta.7",
+    "@tiptap/starter-kit": "3.0.0-beta.7",
     "@workos-inc/authkit-react": "^0.10.0",
     "@workos-inc/node": "^7.54.0",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +60,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-medium-image-zoom": "^5.2.14",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
@@ -62,6 +76,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/sanitize-html": "^2.16.0",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
     "tailwindcss-animate": "^1.0.7",
