--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.24.8",
     "convex-helpers": "^0.1.91",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
